<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id="@+id/greeting" android:text="@string/greeting" android:layout_width="wrap_content"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/region_label"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/region_label"
        android:layout_below="@id/greeting"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:id="@+id/region"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/greeting"
        android:layout_toRightOf="@id/region_label"/>

    <TextView
        android:id="@+id/summoner_label"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/summoner_label"
        android:layout_below="@id/region"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/summoner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/region"
        android:layout_toRightOf="@id/summoner_label" />

    <TextView
        android:id="@+id/refresh_label"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/refresh_label"
        android:layout_below="@id/summoner_label"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:id="@+id/refresh"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/summoner_label"
        android:layout_toRightOf="@id/refresh_label"/>

    <TextView
        android:id="@+id/message_label"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/message_label"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/refresh_label" />

    <EditText
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:layout_below="@id/message_label" />

    <Button
        android:id="@+id/activate_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/message"
        android:text="@string/start"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/level_label"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/level_label"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/activate_button" />

    <TextView
        android:id="@+id/summoner_level"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/level_label"
        android:layout_below="@id/activate_button" />

</RelativeLayout>
